[gd_scene load_steps=4 format=3 uid="uid://ddjxb88itxr"]

[ext_resource type="Theme" uid="uid://byrv18r6jjj5l" path="res://assets/resources/black_menu_theme.tres" id="1_8nhy3"]
[ext_resource type="Script" path="res://scenes/menu/settings_menu.gd" id="2_5b7ek"]
[ext_resource type="Script" path="res://scenes/menu/controls_menu.gd" id="3_o7ol4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_8nhy3")

[node name="settings_menu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 340.0
offset_bottom = 360.0
theme_override_constants/separation = -5
script = ExtResource("2_5b7ek")
metadata/_edit_group_ = true

[node name="vsync_button" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../fullscreen_button")
focus_next = NodePath("../fullscreen_button")
focus_previous = NodePath(".")
text = "V-Sync: Off"

[node name="fullscreen_button" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../vsync_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../resolutions")
focus_next = NodePath("../resolutions")
focus_previous = NodePath("../vsync_button")
text = "Fullscreen: Off"

[node name="window" type="Label" parent="settings_menu"]
layout_mode = 2
text = "Window:"
horizontal_alignment = 1

[node name="resolutions" type="OptionButton" parent="settings_menu"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../fullscreen_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../debug_mode")
focus_next = NodePath("../debug_mode")
focus_previous = NodePath("../fullscreen_button")
alignment = 1
item_count = 3
selected = 2
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="debug_mode" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../resolutions")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../view_controls")
focus_next = NodePath("../view_controls")
focus_previous = NodePath("../resolutions")
text = "Debug mode: Off"

[node name="view_controls" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../debug_mode")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../back_button")
focus_next = NodePath("../back_button")
focus_previous = NodePath("../debug_mode")
text = "View controls"

[node name="back_button" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../view_controls")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../view_controls")
text = "Back"

[node name="controls_menu" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -88.0
offset_right = 428.0
offset_bottom = 240.0
theme_override_constants/separation = 40
script = ExtResource("3_o7ol4")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="controls_menu"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="movement" type="Label" parent="controls_menu/VBoxContainer"]
layout_mode = 2
text = "Movement"

[node name="run" type="Label" parent="controls_menu/VBoxContainer"]
layout_mode = 2
text = "Run"

[node name="crouch" type="Label" parent="controls_menu/VBoxContainer"]
layout_mode = 2
text = "Crouch"

[node name="pause" type="Label" parent="controls_menu/VBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="VBoxContainer2" type="VBoxContainer" parent="controls_menu"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="arrows" type="Label" parent="controls_menu/VBoxContainer2"]
layout_mode = 2
text = "Arrows"
horizontal_alignment = 1

[node name="shift" type="Label" parent="controls_menu/VBoxContainer2"]
layout_mode = 2
text = "Shift"
horizontal_alignment = 1

[node name="ctrl" type="Label" parent="controls_menu/VBoxContainer2"]
layout_mode = 2
text = "Ctrl"
horizontal_alignment = 1

[node name="esc" type="Label" parent="controls_menu/VBoxContainer2"]
layout_mode = 2
text = "Esc"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="controls_menu"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="l3" type="Label" parent="controls_menu/VBoxContainer3"]
layout_mode = 2
text = "L3"
horizontal_alignment = 1

[node name="r1" type="Label" parent="controls_menu/VBoxContainer3"]
layout_mode = 2
text = "R1"
horizontal_alignment = 1

[node name="l1" type="Label" parent="controls_menu/VBoxContainer3"]
layout_mode = 2
text = "L1"
horizontal_alignment = 1

[node name="start" type="Label" parent="controls_menu/VBoxContainer3"]
layout_mode = 2
text = "Start"
horizontal_alignment = 1

[connection signal="pressed" from="settings_menu/vsync_button" to="settings_menu" method="_on_vsync_button_pressed"]
[connection signal="pressed" from="settings_menu/fullscreen_button" to="settings_menu" method="_on_fullscreen_button_pressed"]
[connection signal="item_focused" from="settings_menu/resolutions" to="settings_menu" method="_on_resolutions_item_focused"]
[connection signal="item_selected" from="settings_menu/resolutions" to="settings_menu" method="_on_resolutions_item_selected"]
[connection signal="toggled" from="settings_menu/resolutions" to="settings_menu" method="_on_resolutions_toggled"]
[connection signal="pressed" from="settings_menu/debug_mode" to="settings_menu" method="_on_debug_mode_pressed"]
[connection signal="pressed" from="settings_menu/view_controls" to="settings_menu" method="_on_view_controls_pressed"]
[connection signal="pressed" from="settings_menu/back_button" to="settings_menu" method="_on_back_button_pressed"]
